--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "router-execute-action-provider",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Provide fluxible`s executeAction into the compoment with third parameter redirecting user via react-router",
   "author": {
     "name": "Zlatko Fedor",
@@ -32,37 +32,37 @@
     "eslint": "node ./node_modules/eslint/bin/eslint.js --ext .js,.jsx ."
   },
   "dependencies": {
-    "hoist-non-react-statics": "^1.0.5",
-    "inherits": "^2.0.1"
+    "react-provide-props": "^1.0.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.3",
-    "babel-plugin-transform-decorators": "^6.6.5",
-    "babel-plugin-transform-class-properties": "^6.6.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
+    "babel-eslint": "^6.1.0",
+    "babel-plugin-transform-decorators": "^6.8.0",
+    "babel-plugin-transform-class-properties": "^6.10.2",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
-    "babel-plugin-add-module-exports": "^0.1.2",
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^7.0.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb": "^9.0.1",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^4.3.0",
-    "eslint-plugin-jsx-a11y": "^0.6.2",
+    "eslint-plugin-react": "^5.2.2",
+    "eslint-plugin-jsx-a11y": "^1.5.3",
+    "eslint-plugin-import": "^1.7.0",
     "gulp": "^3.9.1",
     "gulp-mocha": "^2.2.0",
     "gulp-babel": "^6.1.2",
     "gulp-util": "^3.0.7",
-    "should": "^8.3.1",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-router": "^2.3.0",
-    "history": "^2.1.0"
+    "should": "^9.0.2",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-router": "^2.5.0",
+    "history": "^3.0.0"
   },
   "peerDependencies": {
-    "react": "15.x || 0.14.x",
+    "react": "15.x",
     "react-router": "2.x"
   }
 }
